# brln-os

./: .gitignore  =0.19.0  =0.21  =2.1.1  =41.0.7  =5.0.0  BACKUP_AND_RECOVERY_GUIDE.md  BRLN-OS-ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALLATION_TUTORIAL.md  LICENSE  LIGHTNING_ELEMENTS_INTEGRATION_SUMMARY.md  LND_PASSWORD_AUTOMATION.md  LOGIN_FLOW_CHANGES.md  MIGRATION_TO_SECURE_PASSWORD_MANAGER.md  MODULAR_STRUCTURE.md  README.md  README_EN.md  README_LND_CLIENT.md  SCRIPTS.md  SOLUTION.md  TRON_IMPLEMENTATION.md  activate_env.sh  bitcoin_manager.sh  brlnfullauto.sh  brunel.sh  brunel_new.sh  cleanup-credentials.sh  cleanup.sh  close_ports_except_ssh.sh  control-systemd.py  credentials-to-remove.txt  deploy-to-apache.sh  docker-compose.yml  download.sh  extract_passwords.sh  install-bfg.sh  install.sh  (+27 more)
container/: .env.copy  .env.example  Cargo.toml  Dockerfile.elements  Dockerfile.i2pd  Dockerfile.lnd  Dockerfile.peerswap  Dockerfile.tor  Makefile  README-intelligent.md  README-rust.md  README.md  build.sh  create-new-service.sh  create_wallet.exp  docker-compose.yml  elements.conf  elements.sh  lnd-wallet-setup.sh  lnd.conf  man_brlnbolt_docker.md  peerswap.conf  prometheus.yml  service.json.example  setup-docker-intelligent.sh  setup-docker-smartsystem.sh  setup-docker.sh  test.sh
container/bitcoin/: Dockerfile.bitcoin  bitcoin.conf.example  bitcoin.conf.improved  bitcoin.conf.mainnet.example  bitcoin.conf.testnet.example  bitcoin.sh  service.json
container/bos/: Dockerfile.bos  README.md  bos-manager.sh  entrypoint.sh  service.json
(+498 files in other folders)
