[package]
name = "setup-docker-intelligent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "setup-docker-intelligent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
regex = "1.0"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
indexmap = "2.0"
dialoguer = { version = "0.11", features = ["completion"] }
indicatif = "0.17"
which = "4.4"
subprocess = "0.2"
walkdir = "2.3"
log = "0.4"
env_logger = "0.10"
